2014-04-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/{proto.h,cut.c,nano.c,text.c}: Remove the unused parameter
	'file_bot' from copy_from_filestruct(), and rename the other.

2014-04-13  Benno Schulenberg  <bensberg@justemail.net>
	* proto.h, global.c, rcfile.c: Remove the unused parameter 'menu'
	from strtosc().
	* global.c (shortcut_init): Remove mistaken browser item from the
	Go-To-Line menu.
	* global.c (shortcut_init): Delete a misplaced setting of 'currmenu'.
	* global.c (shortcut_init, strtomenu): Cosmetic tweaks.
	* doc/syntax/{changelog,c,po}.nanorc: Some small extra colourings.
	* configure.ac, doc/texinfo/nano.texi: Make --enable-tiny disable
	the use of libmagic, and document the --disable-libmagic flag.
	* src/nano.c (version): Print the correct --enable/--disable option.
	* configure.ac, src/*, doc/texinfo/nano.texi: Convert all occurrences
	of #ifdef ENABLE_NANORC to #ifndef DISABLE_NANORC, and adapt for it.
	* configure.ac: Complain about --enable-color without --enable-nanorc.

2014-04-10  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/Makefile.am: Add four recent syntaxes to the packlist.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* doc: Add the documentation for the new --noread option.
	* doc: Add missing --poslog option to the texinfo file, plus tweaks.

2014-04-08  Hans Alves  <fonsvandeachterburen@gmail.com>
	* nano.h, files.c, nano.c: Adding the command-line option --noread
	to treat any name on the command line as a new file.  This allows
	nano to write to named pipes -- it will start with a blank buffer,
	and will write to the pipe when the user saves the file.  This way
	nano can be used as an editor in combination with for instance gpg
	without having to write sensitive data to disk first.

2014-04-08  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/*.c: More editing of comment blocks and trimming of blank lines.

2014-04-08  Benno Schulenberg  <bensberg@justemail.net>