@@ -1,6 +1,8 @@
 2014-04-14  Benno Schulenberg  <bensberg@justemail.net>
 	* src/{proto.h,cut.c,nano.c,text.c}: Remove the unused parameter
 	'file_bot' from copy_from_filestruct(), and rename the other.
+	* src/*: Remove the unused parameter 'func_key' from get_shortcut(),
+	and subsequently from parse_browser_input() and parse_help_input().
 
 2014-04-13  Benno Schulenberg  <bensberg@justemail.net>
 	* proto.h, global.c, rcfile.c: Remove the unused parameter 'menu'
